--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.29.0
-numpy==1.26.4
-pandas==2.2.1
-plotly==5.22.0
-Pillow==10.4.0
+streamlit==1.28.0
+pandas==2.0.3
+plotly==5.15.0
+plotly-express==0.4.1
+Pillow==10.0.0
+numpy==1.24.3
