--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+# Use a newer numpy version that works with Python 3.13+
+numpy>=1.25.0
+pandas>=2.1.0
 streamlit==1.28.0
-pandas==2.0.3
-plotly==5.15.0
-plotly-express==0.4.1
-Pillow==10.0.0
-numpy==1.24.3
+plotly
+Pillow
